Try to fix typo by adding `steps:`

--- a/.github/workflows/alkiln_test_load_interview_list.yml
+++ b/.github/workflows/alkiln_test_load_interview_list.yml
@@ -15,12 +15,12 @@ jobs:
     env:
       SERVER_URL: "${{ secrets.SERVER_URL }}"
       DOCASSEMBLE_DEVELOPER_API_KEY: "${{ secrets.DOCASSEMBLE_DEVELOPER_API_KEY }}"
-
-    - name: Install node packages
-      uses: actions/setup-node@v1
-      with:
-        node-version: "17"
-    - run: npm install
-    - name: Load each testing server interview
-      run: npm run test
-    - run: echo "Finished running ALKiln tests"
+    steps:
+      - name: Install node packages
+        uses: actions/setup-node@v1
+        with:
+          node-version: "17"
+      - run: npm install
+      - name: Load each testing server interview
+        run: npm run test
+      - run: echo "Finished running ALKiln tests"
